# rust_prototype

./: .env  Cargo.toml  README.md  diesel.toml  package.json  tailwind.config.js  test.db
assets/: main.css
src/: lib.rs  main.rs  models.rs
src/handlers/: another_page.rs  blog_list.rs  hello.rs  mod.rs  todo.rs
src/services/: mod.rs  post_service.rs
templates/: base.html  blog_list.html  hello.html
