[package]
name = "rust_prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
askama = "0.12.1"
axum = "0.7.0"
axum-server = "0.7.1"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
