[package]
name = "rust_prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
askama = "0.12.1"
axum = { version = "0.8.1", features = ["macros"] }
axum-server = "0.7.1"
multipart = "0.18.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.135"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
